# url-shortener

./: .env.example  .gitignore  BUILDING.md  Cargo.toml  DEPLOY.md  README.md  SECURITY.md  compose.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml
.cargo/: config.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: qc.yml  release-plz.yml  rust-build.yml  website.yml
.railway/: railway.ts
apps/api/: CHANGELOG.md  Cargo.toml
apps/api/migrations/: 0001_create_links.sql
apps/api/src/: cli.rs  db.rs  errors.rs  main.rs  shortcode.rs
apps/shortener_api/: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile.ci  Dockerfile.dev
apps/shortener_api/migrations/: 0002_dedup_original_url.sql
apps/shortener_api/release-inputs/: railway
apps/shortener_api/src/: cli.rs  db.rs  errors.rs  lib.rs  main.rs  routes.rs
apps/shortener_api/tests/: api.rs
apps/web/: .env.example  .gitignore  .oxlintrc.json  Caddyfile  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
apps/web/src/: app.css  index.tsx  vite-env.d.ts
apps/web/src/components/: AppBar.tsx  DuplicateNotice.tsx  Hero.tsx  PanelHeader.tsx  QrPreview.tsx  RecentRow.tsx  RecentSection.tsx  ResultCard.tsx  ScrambleCode.tsx  ShortenerForm.tsx
apps/web/src/lib/: health.ts  history.ts  qrcode.ts  session-cache.ts  shorten.ts
docs/: decision.md  minutiae.md
