[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio"] }
url = "2.5.8"
axum = "0.8.9"
argh = { git = "https://github.com/zeon256/argh.git" }
thiserror = "2.0.18"
anyhow = "1.0.103"

[workspace.metadata.dylint]
libraries = [{ git = "https://github.com/zeon256/style-rust-aku", branch = "main" }]
