[package]
name = "shortener_api"
version = "0.2.0"
edition = "2024"
# These symlinked inputs make frontend and deploy changes visible to release-plz.
include = [
  "/CHANGELOG.md",
  "/Cargo.toml",
  "/Dockerfile.ci",
  "/migrations/**",
  "/release-inputs/railway/**",
  "/release-inputs/web/Caddyfile",
  "/release-inputs/web/Dockerfile",
  "/release-inputs/web/index.html",
  "/release-inputs/web/package.json",
  "/release-inputs/web/public/**",
  "/release-inputs/web/src/**",
  "/release-inputs/web/tsconfig.json",
  "/release-inputs/web/vite.config.ts",
  "/src/**",
  "/tests/**",
]

[dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "macros"] }
url = { version = "2.5.8", features = ["serde"] }
axum = "0.8.9"
argh-env = { version = "0.1.0" }
thiserror = "2.0.18"
anyhow = "1.0.103"
rand = "0.10.1"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
mimalloc = { version = "0.1.48", features = ["v3"] }
moka = { version = "0.12.15", features = ["future"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
